--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "yiisoft/yii2-bootstrap4": "^2.0",
-        "kartik-v/yii2-icons": "@dev"
+        "kartik-v/yii2-icons": "@dev",
+        "dektrium/yii2-user": "^0.9.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
